--- a/configs/urxvt/Xresources.1
+++ b/configs/urxvt/Xresources.1
@@ -26,7 +26,12 @@ URxvt.shading: 20
 !URxvt.backgroundPixmap: 
 !URxvt.path:
 URxvt.font: xft:Dejavu Sans Mono:size=16,\
-                        xft:WenQuanYi Bitmap Song:size=16
+                        xft:WenQuanYi Zen Hei Sharpe:size=26:style=Regular:antialias=true,\
+                        xft:WenQuanYi Zen Hei:size=38:style=Regular:antialias=true,\
+                        xft:WenQuanYi Zen Hei Mono:size=38:style=Regular:antialias=true,\
+                        xft:WenQuanYi Micro Hei:size=38:style=Regular:antialias=true,\
+                        xft:WenQuanYi Micro Hei Mono:size=38:style=Regular:antialias=true,\
+                        xft:WenQuanYi Bitmap Song:size=26:style=Regular
 !URxvt.boldFont:
 !URxvt.italicFont:
 !URxvt.boldItalicFont:
@@ -93,7 +98,7 @@ URxvt.keysym.M-s: perl:keyboard-select:search
 URxvt.keyboard-select.clipboard: true
 URxvt.keysym.Control-n: perl:tabbedex:new_tab
 URxvt.keysym.Control-j: perl:tabbedex:prev_tab
-URxvt.keysym.Control-k: perl:tabbedex:next_tab                
+URxvt.keysym.Control-semicolon: perl:tabbedex:next_tab                
 URxvt.keysym.Control-m: perl:tabbedex:rename_tab
 
 
