--- a/configs/link-files/urxvt/Xresources.1
+++ b/configs/link-files/urxvt/Xresources.1
@@ -96,7 +96,7 @@ URxvt.perl-ext-common: keyboard-select,tabbedex
 URxvt.keysym.M-Escape: perl:keyboard-select:activate
 URxvt.keysym.M-s: perl:keyboard-select:search
 URxvt.keyboard-select.clipboard: true
-URxvt.keysym.Control-n: perl:tabbedex:new_tab
+URxvt.keysym.Control-i: perl:tabbedex:new_tab
 URxvt.keysym.Control-j: perl:tabbedex:prev_tab
 URxvt.keysym.Control-semicolon: perl:tabbedex:next_tab                
 URxvt.keysym.Control-m: perl:tabbedex:rename_tab
