--- a/configs/urxvt/Xresources.1
+++ b/configs/urxvt/Xresources.1
@@ -142,3 +142,5 @@ URxvt.color14: #34E2E2
 URxvt.color7: #D3D7CF
 
 URxvt.color15: #EEEEEC 
+
+URxvt*font: xft:Source\ Code\ Pro\ for\ Powerline,Source\ Code\ Pro\ Medium:size=11
