--- a/configs/link-files/urxvt/Xresources.1
+++ b/configs/link-files/urxvt/Xresources.1
@@ -31,7 +31,10 @@ URxvt.font: xft:Dejavu Sans Mono:size=16,\
                         xft:WenQuanYi Zen Hei Mono:size=38:style=Regular:antialias=true,\
                         xft:WenQuanYi Micro Hei:size=38:style=Regular:antialias=true,\
                         xft:WenQuanYi Micro Hei Mono:size=38:style=Regular:antialias=true,\
-                        xft:WenQuanYi Bitmap Song:size=26:style=Regular
+                        xft:WenQuanYi Bitmap Song:size=26:style=Regular,\
+						xft:Source\ Code\ Pro\ for\ Powerline:size=22:style=ExtraLight,\
+						xft:PowerlineSymbols
+!URxvt.font: xft:Source\ Code\ Pro\ for\ Powerline:pixelsize=22,xft:PowerlineSymbols
 !URxvt.boldFont:
 !URxvt.italicFont:
 !URxvt.boldItalicFont:
@@ -142,3 +145,12 @@ URxvt.color14: #34E2E2
 URxvt.color7: #D3D7CF
 
 URxvt.color15: #EEEEEC 
+
+URxvt.letterSpace: 1
+!URxvt.font: xft:Source\ Code\ Pro\ for\ Powerline:pixelsize=22,xft:PowerlineSymbols
+!URxvt.scrollBar: false
+!Xft.dpi: 150
+!Xft.antialias: true
+!Xft.rgba: rgb
+!Xft.hinting: true
+!Xft.hintstyle: hintslight
