--- a/configs/urxvt/Xresources.1
+++ b/configs/urxvt/Xresources.1
@@ -31,7 +31,9 @@ URxvt.font: xft:Dejavu Sans Mono:size=16,\
                         xft:WenQuanYi Zen Hei Mono:size=38:style=Regular:antialias=true,\
                         xft:WenQuanYi Micro Hei:size=38:style=Regular:antialias=true,\
                         xft:WenQuanYi Micro Hei Mono:size=38:style=Regular:antialias=true,\
-                        xft:WenQuanYi Bitmap Song:size=26:style=Regular
+                        xft:WenQuanYi Bitmap Song:size=26:style=Regular,\
+						xft:Source Code Pro for Powerline:style=ExtraLight,\
+						xft:PowerlineSymbols
 !URxvt.boldFont:
 !URxvt.italicFont:
 !URxvt.boldItalicFont:
@@ -142,5 +144,3 @@ URxvt.color14: #34E2E2
 URxvt.color7: #D3D7CF
 
 URxvt.color15: #EEEEEC 
-
-URxvt*font: xft:Source\ Code\ Pro\ for\ Powerline,Source\ Code\ Pro\ Medium:size=11
